* Tue Oct 06 2008 Ding-Yi Chen <dchen at redhat dot com> - 0.5.2-0
- New Features:
  + New pseudo field 'ZhuYin'.
  + allocate.h is in API.
  + New unihan_query options: -O -P -T -Z -z
  + Scalar String (U+XXXXX) is now be able to use in the input of Field query.
  + New functions: unihanField_is_case_no_change() and unihanField_is_lowercase()
- Fixed:
  + Behavior of unihan_query -U is now corrected.
  + Descriptions about pseudo field are corrected.
  + Handle NULL of str in stringList_insert(StringList *sList, const char *str).
- Changed:
  + In document, "simply query" is replaced by "field query".
  + unihanField_is_scalar_value() is renamed as unihanField_is_ucs4().
  + pinyin_strip_tone() and zhuYin_strip_tone()  now return 0 if tone of
    pinyin/zhuyin is not specified.
  + Doxyfile is renamed as Doxygen.in, so no need to manually modified the
  version number.


* Tue Sep 23 2008 Ding-Yi Chen <dchen at redhat dot com> - 0.5.1-0
- New Features:
  + PinYin accent format conversion functions (C and SQL scalar).
  + ZhuYin tone mark format conversion functions (C and SQL scalar).
  + PinYin <-->  ZhuYin conversion functions (C and SQL scalar).
  + Display as ZhuYin.
- Fixed:
  + Correct counting in FreqRank field of kMandarin table.
  + The query functions such as unihan_find_all_matched() returns SQL_Results type, to avoid the memory leaking problems.
- Changed:
  + unihanDb_open() now supports the R/W control.
  + Changed CMakefile.txt to reflects the version scheme change of UnihanDb
  + StringList type for storing const string arrays.
  + Add test suite.
  + Where-clause-generator is now able to escape the quote character(').
  + unihan_field_validation is moved to test/, therefore it will not be in binary package.
  + New make targets: rpm, srpm, rpm_db and srpm_db to generate rpm and srpm for libUnihan and UnihanDb.
- Removed:
  + unihanSql_get_result_table(). As it uses sqlite3_get_table() which might cause memory leak.
